[gd_scene load_steps=3 format=3 uid="uid://dv6uht3s2mdrb"]

[ext_resource type="Script" path="res://scripts/login_data.gd" id="1_ktvta"]
[ext_resource type="Theme" uid="uid://cfxt25d75fpp" path="res://themes/game.tres" id="2_wyidd"]

[node name="LoginData" type="MarginContainer"]
offset_right = 202.0
offset_bottom = 284.0
script = ExtResource("1_ktvta")

[node name="UserData" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="UserDataMargin" type="MarginContainer" parent="UserData"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="UserDataVBox" type="VBoxContainer" parent="UserData/UserDataMargin"]
layout_mode = 2

[node name="Spacer1" type="Control" parent="UserData/UserDataMargin/UserDataVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Login" type="Label" parent="UserData/UserDataMargin/UserDataVBox"]
layout_mode = 2
theme = ExtResource("2_wyidd")
theme_override_font_sizes/font_size = 24
text = "text"

[node name="Password" type="Label" parent="UserData/UserDataMargin/UserDataVBox"]
layout_mode = 2
theme = ExtResource("2_wyidd")
theme_override_font_sizes/font_size = 24
text = "text"

[node name="TFA" type="Label" parent="UserData/UserDataMargin/UserDataVBox"]
layout_mode = 2
theme = ExtResource("2_wyidd")
theme_override_font_sizes/font_size = 24
text = "text"

[node name="Spacer2" type="Control" parent="UserData/UserDataMargin/UserDataVBox"]
layout_mode = 2
size_flags_vertical = 3
